# descargaloto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  create_deb.sh  install.sh  resources.qrc  run.sh  run_clean.sh  run_safe.sh  uninstall.sh
package/DEBIAN/: control  postinst  postrm  prerm
package/usr/local/share/applications/: descargaloto.desktop
package/usr/local/share/doc/descargaloto/: README
src/: aboutdialog.cpp  aboutdialog.h  downloadmanager.cpp  downloadmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  systemtrayicon.cpp  systemtrayicon.h
